--- a/LegendsViewer/LegendsViewer.csproj
+++ b/LegendsViewer/LegendsViewer.csproj
@@ -43,13 +43,14 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SevenZipSharp, Version=0.64.3890.29348, Culture=neutral, PublicKeyToken=20de82c62b055c88, processorArchitecture=MSIL">
@@ -84,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Controls\appClasses.cs" />
     <Compile Include="Controls\Chart\ChartControl.cs" />
+    <Compile Include="Controls\Comparers.cs" />
     <Compile Include="Controls\DwarfTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -169,6 +171,7 @@
     <Compile Include="Legends\EventCollections\Battle.cs" />
     <Compile Include="Legends\EventCollections\BeastAttack.cs" />
     <Compile Include="Legends\EventCollections\CeremonyCollection.cs" />
+    <Compile Include="Legends\EventCollections\PurgeCollection.cs" />
     <Compile Include="Legends\EventCollections\CompetitionCollection.cs" />
     <Compile Include="Legends\EventCollections\Duel.cs" />
     <Compile Include="Legends\EventCollections\EventCollections.cs" />
@@ -189,14 +192,17 @@
     <Compile Include="Legends\OwnerPeriod.cs" />
     <Compile Include="Legends\ParsingErrors.cs" />
     <Compile Include="Legends\Population.cs" />
-    <Compile Include="Legends\Region.cs" />
     <Compile Include="Legends\Link.cs" />
+    <Compile Include="Legends\Region.cs" />
     <Compile Include="Legends\Site.cs" />
     <Compile Include="Legends\SitesAndPopsParser.cs" />
+    <Compile Include="Legends\Structure.cs" />
+    <Compile Include="Legends\WorldConstruction.cs" />
     <Compile Include="Legends\UndergroundRegion.cs" />
     <Compile Include="Legends\World.cs" />
     <Compile Include="Legends\WorldObject.cs" />
     <Compile Include="Legends\XMLParser.cs" />
+    <Compile Include="Legends\XMLPlusParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\Map\dlgPopulation.resx">
