--- a/LegendsViewer/LegendsViewer.csproj
+++ b/LegendsViewer/LegendsViewer.csproj
@@ -51,6 +51,7 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugSymbols>true</DebugSymbols>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SevenZipSharp, Version=0.64.3890.29348, Culture=neutral, PublicKeyToken=20de82c62b055c88, processorArchitecture=MSIL">
@@ -186,6 +187,7 @@
     <Compile Include="Legends\EntityPositionAssignment.cs" />
     <Compile Include="Legends\EntityReputation.cs" />
     <Compile Include="Legends\EntitySiteLink.cs" />
+    <Compile Include="Legends\Enums\AbuseType.cs" />
     <Compile Include="Legends\Enums\AgreementReason.cs" />
     <Compile Include="Legends\Enums\AgreementTopic.cs" />
     <Compile Include="Legends\Enums\BattleOutcome.cs" />
@@ -413,8 +415,12 @@
     <Content Include="7z64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Controls\HTML\Styles\bootstrap.min.css" />
-    <Content Include="Controls\HTML\Styles\font-awesome.min.css" />
+    <Content Include="bootstrap.min.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="font-awesome.min.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="Controls\HTML\Scripts\cytoscape.min.js" />
     <EmbeddedResource Include="Controls\HTML\Scripts\familygraph.js" />
     <EmbeddedResource Include="Controls\HTML\Styles\legends.css" />
