--- a/LegendsViewer/LegendsViewer.csproj
+++ b/LegendsViewer/LegendsViewer.csproj
@@ -54,6 +54,9 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ObjectListView">
+      <HintPath>.\ObjectListView.dll</HintPath>
+    </Reference>
     <Reference Include="SevenZipSharp, Version=0.64.3890.29348, Culture=neutral, PublicKeyToken=20de82c62b055c88, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\SevenZipSharp.dll</HintPath>
@@ -80,6 +83,9 @@
     </Reference>
     <Reference Include="System.Xml">
     </Reference>
+    <Reference Include="WFC">
+      <HintPath>.\WFC.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\appClasses.cs" />
@@ -94,6 +100,7 @@
     <Compile Include="Controls\DwarfTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\EventArgs.cs" />
     <Compile Include="Controls\HTML\ArtifactPrinter.cs" />
     <Compile Include="Controls\HTML\LandmassPrinter.cs" />
     <Compile Include="Controls\HTML\MountainPeakPrinter.cs" />
@@ -103,6 +110,8 @@
     <Compile Include="Controls\HTML\WorldConstructionPrinter.cs" />
     <Compile Include="Controls\HTML\Utilities\SkillDictionary.cs" />
     <Compile Include="Controls\HTML\WrittenContentPrinter.cs" />
+    <Compile Include="Controls\InputBox.cs" />
+    <Compile Include="Controls\LVCoordinator.cs" />
     <Compile Include="Controls\Map\dlgPopulation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +163,54 @@
     <Compile Include="Controls\Query\SearchList.cs" />
     <Compile Include="Controls\Query\SearchProperty.cs" />
     <Compile Include="Controls\SimpleLists.cs" />
+    <Compile Include="Controls\Tabs\WarfareTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\WarfareTab.Designer.cs">
+      <DependentUpon>WarfareTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\GeographyTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\GeographyTab.Designer.cs">
+      <DependentUpon>GeographyTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\SitesTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\SitesTab.Designer.cs">
+      <DependentUpon>SitesTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\CivsTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\CivsTab.Designer.cs">
+      <DependentUpon>CivsTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\CollectionsTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\CollectionsTab.Designer.cs">
+      <DependentUpon>CollectionsTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\HistoricalFiguresTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\HistoricalFiguresTab.Designer.cs">
+      <DependentUpon>HistoricalFiguresTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\BaseSearchTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\BaseSearchTab.Designer.cs">
+      <DependentUpon>BaseSearchTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Tabs\SummaryTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Tabs\SummaryTab.Designer.cs">
+      <DependentUpon>SummaryTab.cs</DependentUpon>
+    </Compile>
     <Compile Include="dlgFileSelect.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -364,6 +421,30 @@
     <EmbeddedResource Include="Controls\Query\QueryControl.resx">
       <DependentUpon>QueryControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\WarfareTab.resx">
+      <DependentUpon>WarfareTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\GeographyTab.resx">
+      <DependentUpon>GeographyTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\SitesTab.resx">
+      <DependentUpon>SitesTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\CivsTab.resx">
+      <DependentUpon>CivsTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\CollectionsTab.resx">
+      <DependentUpon>CollectionsTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\HistoricalFiguresTab.resx">
+      <DependentUpon>HistoricalFiguresTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\BaseSearchTab.resx">
+      <DependentUpon>BaseSearchTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Tabs\SummaryTab.resx">
+      <DependentUpon>SummaryTab.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgFileSelect.resx">
       <DependentUpon>dlgFileSelect.cs</DependentUpon>
     </EmbeddedResource>
@@ -422,6 +503,7 @@
     <EmbeddedResource Include="Controls\HTML\Styles\legends.css" />
     <EmbeddedResource Include="Controls\HTML\Scripts\Chart.min.js" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
